--- a/_toc.yml
+++ b/_toc.yml
@@ -2,39 +2,46 @@ format: jb-book
 root: intro.md
 chapters:
 - file: 01/Chapter-1-Introduction.ipynb
-- file: 01/1/Basics.ipynb
-- file: 01/2/Variables-and-Types.ipynb
-- file: 01/3/Libraries.ipynb
-- file: 01/4/Flow-of-Control.ipynb
-- file: 01/5/Looping-and-Lists.ipynb
+  sections:
+  - file: 01/1/Basics.ipynb
+  - file: 01/2/Variables-and-Types.ipynb
+  - file: 01/3/Libraries.ipynb
+  - file: 01/4/Flow-of-Control.ipynb
+  - file: 01/5/Looping-and-Lists.ipynb
 - file: 09/Randomness.ipynb
-- file: 09/1/Conditional_Statements.ipynb
-- file: 09/2/Iteration.ipynb
-- file: 09/3/Simulation.ipynb
-- file: 09/4/Monty_Hall_Problem.ipynb
-- file: 09/5/Finding_Probabilities.ipynb
+  sections:
+  - file: 09/1/Conditional_Statements.ipynb
+  - file: 09/2/Iteration.ipynb
+  - file: 09/3/Simulation.ipynb
+  - file: 09/4/Monty_Hall_Problem.ipynb
+  - file: 09/5/Finding_Probabilities.ipynb
 - file: 10/Sampling_and_Empirical_Distributions.ipynb
-- file: 10/1/Empirical_Distributions.ipynb
-- file: 10/2/Sampling_from_a_Population.ipynb
-- file: 10/3/Empirical_Distribution_of_a_Statistic.ipynb
+  sections:
+  - file: 10/1/Empirical_Distributions.ipynb
+  - file: 10/2/Sampling_from_a_Population.ipynb
+  - file: 10/3/Empirical_Distribution_of_a_Statistic.ipynb
 - file: 11/Testing_Hypotheses.ipynb
-- file: 11/1/Assessing_Models.ipynb
-- file: 11/2/Multiple_Categories.ipynb
-- file: 11/3/Decisions_and_Uncertainty.ipynb
-- file: 11/4/Error_Probabilities.ipynb
+  sections:
+  - file: 11/1/Assessing_Models.ipynb
+  - file: 11/2/Multiple_Categories.ipynb
+  - file: 11/3/Decisions_and_Uncertainty.ipynb
+  - file: 11/4/Error_Probabilities.ipynb
 - file: 12/Comparing_Two_Samples.ipynb
-- file: 12/1/AB_Testing.ipynb
-- file: 12/2/Deflategate.ipynb
-- file: 12/3/Causality.ipynb
+  sections:
+  - file: 12/1/AB_Testing.ipynb
+  - file: 12/2/Deflategate.ipynb
+  - file: 12/3/Causality.ipynb
 - file: 13/Estimation.ipynb
-- file: 13/1/Percentiles.ipynb
-- file: 13/2/Bootstrap.ipynb
-- file: 13/3/Confidence_Intervals.ipynb
-- file: 13/4/Using_Confidence_Intervals.ipynb
+  sections:
+  - file: 13/1/Percentiles.ipynb
+  - file: 13/2/Bootstrap.ipynb
+  - file: 13/3/Confidence_Intervals.ipynb
+  - file: 13/4/Using_Confidence_Intervals.ipynb
 - file: 14/Why_the_Mean_Matters.ipynb
-- file: 14/1/Properties_of_the_Mean.ipynb
-- file: 14/2/Variability.ipynb
-- file: 14/3/SD_and_the_Normal_Curve.ipynb
-- file: 14/4/Central_Limit_Theorem.ipynb
-- file: 14/5/Variability_of_the_Sample_Mean.ipynb
-- file: 14/6/Choosing_a_Sample_Size.ipynb
+  sections:
+  - file: 14/1/Properties_of_the_Mean.ipynb
+  - file: 14/2/Variability.ipynb
+  - file: 14/3/SD_and_the_Normal_Curve.ipynb
+  - file: 14/4/Central_Limit_Theorem.ipynb
+  - file: 14/5/Variability_of_the_Sample_Mean.ipynb
+  - file: 14/6/Choosing_a_Sample_Size.ipynb
