--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,9 @@ chapters:
   - file: 01/3/Libraries.ipynb
   - file: 01/4/Flow-of-Control.ipynb
   - file: 01/5/Looping-and-Lists.ipynb
+- file: 02/Chapter-2-More-Python.ipynb
+  sections:
+    - file: 02/1/list-strings-tuples.ipynb
 - file: 09/Randomness.ipynb
   sections:
   - file: 09/1/Conditional_Statements.ipynb
