Adding functions build

--- a/_toc.yml
+++ b/_toc.yml
@@ -13,6 +13,7 @@ chapters:
     - file: 02/1/list-strings-tuples.ipynb
     - file: 02/2/numpy.ipynb
     - file: 02/3/dictionaries_visualization_descriptive_statistics.ipynb
+    - file: 02/4/functions.ipynb
 - file: 09/Randomness.ipynb
   sections:
   - file: 09/1/Conditional_Statements.ipynb
